Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82470

QSortfilterProxyModel has depricated documentaion and no hint how to reset(). invalidateFilter() is broken

XMLWordPrintable

    • 3702a4c37e06a989cdd1cf19a26bc0d1c3fba07c (qt/qtbase/5.14)

      https://doc.qt.io/qt-5/qsortfilterproxymodel.html#filtering

      If you are working with large amounts of filtering and have to invoke invalidateFilter() repeatedly, using reset() may be more efficient, depending on the implementation of your model. However, reset() returns the proxy model to its original state, losing selection information, and will cause the proxy model to be repopulated.

       reset() is depricated since 5.0

       

      invalidateFilter() does nothing. -> is used from QML

      setFilterFixedString("") is a workaround... but is it the common solution?

        1. SortFilterProxyModel.h
          0.6 kB
          Philipp Hauck
        2. SortFilterProxyModel.cpp
          0.4 kB
          Philipp Hauck
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            hauck Philipp Hauck
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes